[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/Broken Console Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://tscn/32.tres" type="DynamicFont" id=3]
[ext_resource path="res://tscn/29.tres" type="DynamicFont" id=4]
[ext_resource path="res://tscn/64.tres" type="DynamicFont" id=5]
[ext_resource path="res://tscn/20.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainUI" type="Node2D" parent="UI"]

[node name="title" type="Label" parent="UI/MainUI"]
margin_left = 208.0
margin_top = 120.0
margin_right = 916.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "The Colorful Chess"

[node name="createServer" type="Button" parent="UI/MainUI"]
margin_left = 408.0
margin_top = 376.0
margin_right = 616.0
margin_bottom = 424.0
custom_fonts/font = ExtResource( 3 )
text = "创建服务器"

[node name="joinServer" type="Button" parent="UI/MainUI"]
margin_left = 408.0
margin_top = 446.0
margin_right = 616.0
margin_bottom = 494.0
custom_fonts/font = ExtResource( 3 )
text = "加入服务器"

[node name="PlayerName" type="TextEdit" parent="UI/MainUI"]
margin_left = 424.0
margin_top = 224.0
margin_right = 632.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 4 )

[node name="PlayerNameLabel" type="Label" parent="UI/MainUI"]
margin_left = 312.0
margin_top = 224.0
margin_right = 416.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 3 )
text = "玩家名："

[node name="IP" type="TextEdit" parent="UI/MainUI"]
margin_left = 424.0
margin_top = 264.0
margin_right = 632.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 4 )
text = "127.0.0.1"

[node name="IPLabel" type="Label" parent="UI/MainUI"]
margin_left = 344.0
margin_top = 264.0
margin_right = 416.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 3 )
text = "地址："

[node name="Port" type="TextEdit" parent="UI/MainUI"]
margin_left = 424.0
margin_top = 304.0
margin_right = 632.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 4 )
text = "3366"

[node name="PortLabel" type="Label" parent="UI/MainUI"]
margin_left = 344.0
margin_top = 304.0
margin_right = 424.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 3 )
text = "端口："

[node name="WatingUI" type="Node2D" parent="UI"]
visible = false

[node name="title" type="Label" parent="UI/WatingUI"]
margin_left = 384.0
margin_top = 48.0
margin_right = 640.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 5 )
text = "等待大厅"

[node name="1" type="Label" parent="UI/WatingUI"]
margin_left = 192.0
margin_top = 464.0
margin_right = 352.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 3 )
text = "等待中"
align = 1
clip_text = true

[node name="2" type="Label" parent="UI/WatingUI"]
margin_left = 360.0
margin_top = 464.0
margin_right = 512.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 3 )
text = "等待中"
align = 1
valign = 1
clip_text = true

[node name="3" type="Label" parent="UI/WatingUI"]
margin_left = 512.0
margin_top = 464.0
margin_right = 670.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 3 )
text = "等待中"
align = 1
clip_text = true

[node name="4" type="Label" parent="UI/WatingUI"]
margin_left = 680.0
margin_top = 464.0
margin_right = 832.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 3 )
text = "等待中"
align = 1
clip_text = true

[node name="StartGame" type="Button" parent="UI/WatingUI"]
margin_left = 672.0
margin_top = 520.0
margin_right = 816.0
margin_bottom = 552.0
custom_fonts/font = ExtResource( 4 )
text = "开始"

[node name="Back" type="Button" parent="UI/WatingUI"]
margin_left = 224.0
margin_top = 520.0
margin_right = 368.0
margin_bottom = 552.0
custom_fonts/font = ExtResource( 4 )
text = "返回"

[node name="Chat" type="RichTextLabel" parent="UI/WatingUI"]
margin_top = 224.0
margin_right = 184.0
margin_bottom = 512.0
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 6 )
custom_fonts/italics_font = ExtResource( 6 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 6 )

[node name="TextEdit" type="TextEdit" parent="UI/WatingUI"]
margin_top = 512.0
margin_right = 144.0
margin_bottom = 536.0
custom_fonts/font = ExtResource( 6 )

[node name="send" type="Button" parent="UI/WatingUI"]
margin_left = 144.0
margin_top = 512.0
margin_right = 190.0
margin_bottom = 536.0
text = "SEND"

[node name="Wrong" type="Node2D" parent="UI"]
visible = false

[node name="Label" type="Label" parent="UI/Wrong"]
margin_left = 232.0
margin_top = 176.0
margin_right = 800.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="WrongTimer" type="Timer" parent="UI/Wrong"]
wait_time = 2.0
one_shot = true

[node name="CTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CTimer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="UI/MainUI/createServer" to="." method="_on_createServer_pressed"]
[connection signal="pressed" from="UI/MainUI/joinServer" to="." method="_on_joinServer_pressed"]
[connection signal="pressed" from="UI/WatingUI/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="UI/WatingUI/send" to="." method="_on_send_pressed"]
[connection signal="timeout" from="UI/Wrong/WrongTimer" to="." method="_on_WrongTimer_timeout"]
[connection signal="timeout" from="CTimer" to="." method="_on_CTimer_timeout"]
[connection signal="timeout" from="CTimer2" to="." method="_on_CTimer2_timeout"]
